# SpiderORM

./: .gitignore  .pypirc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Features-to-add.md  LICENSE  MANIFEST.in  README-en.md  README-pt.md  README.md  db.sqlite3  netlify.toml  requirements.txt  setup.cfg  setup.py  usage_example.py
.github/workflows/: CI.yml  ci_pr.yml  ci_push.yml  continuos_integration.yml  deploy.yaml  deploy_docs.yaml  fork.yml  netlify.yml  publish-to-pypi.yml  publish_to_pypi.yml  push_tag.yml  test_package_install.yaml  test_package_install.yml  tests.yml
Nova pasta/workflows/: netlify.txt
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/source/: conf.py  contribute.rst  database_connections.rst  fields.rst  getting_started.rst  index.rst  introduction.rst
spider/: fields.py  models.py  sanitizers.py  sql_utils.py
spider/mysql/: connection.py  exceptions.py
spider/sqlite/: sqlite_connection.py
spider/validators/: _re.py  fields_validations.py
spiderweb_orm/: fields.py  main.py  models.py  sanitizers.py  sql_utils.py
spiderweb_orm/mysql/: connection.py  exceptions.py
spiderweb_orm/sqlite/: exceptions.py
spiderweb_orm/sqlite3/: sqlite_connection.py
spiderweb_orm/validators/: _re.py  fields.py  fields_validations.py
tests/unit/: test_models.py  test_sql_util.py
