[metadata]
name=spider-orm
version=0.1.0
author=Simão Domingos De Oliveira António
author_email=simaodomingos413@gmail.com
description= Spider ORM is a lightweight and flexible ORM (Object-Relational Mapping) library for Python. 
long_description= file: README.md
long_description_content_type=text/markdown
url=https://github.com/simondev413/sipder-ORM-v0.1
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Aproved :: MIT License
    Operating System :: OS Independent

[options]
packages= find:
python_requires= >=3.6
include_packages_data = true
install_requires = 

[options.extras_require]
dev =
    pytest>=3.7
    sphinx
    mysqlclient
