[metadata]
name = spider-orm
version = 0.1.3
author = Simão Domingos De Oliveira António
author_email = simaodomingos413@gmail.com
description = Spider ORM is a lightweight and flexible ORM (Object-Relational Mapping) library for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://spider-orm.netlify.app
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = true
install_requires =
    mysqlclient
    sqlite

[options.extras_require]
dev =
    pytest >= 3.7
    sphinx
    pytest-mock  
    coverage     
